@@ -1,0 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+Ecolink Door Window Sensor (DWZWAVE2.5-ECO)
+http://products.z-wavealliance.org/products/1498
+-->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+    <!-- Basic set as report-->
+	<CommandClass id="32" setasreport="true"/>    
+    <!-- Association Groups -->
+    <CommandClass id="133">
+        <Associations num_groups="2">
+            <Group index="1" max_associations="5" label="Lifeline"/>
+            <Group index="2" max_associations="5" label="Basic Report"/>
+        </Associations>
+    </CommandClass>
+</Product>
