@@ -16,7 +16,7 @@ Ecolink Z-Wave Sensor Z-Wave
     <!-- Association Groups -->
     <CommandClass id="133">
         <Associations num_groups="2">
-            <Group index="1" max_associations="5" label="Alarm Report"/>
+            <Group index="1" max_associations="5" label="Lifeline"/>
             <Group index="2" max_associations="5" label="Basic Report"/>
         </Associations>
     </CommandClass>
